# Trivian-resonance-lattice

./: INSTALL.md  LICENSE  README.md  setup.cfg
core/: field_core.py  signature_verifier.py
examples/: demo.py
interface/: entrainment_protocol.py  gaian_interface.py
lattice/: healing_engine.py  ignition_layer.py  relational_layer.py  resonance_lattice.py
tests/: test_field_core.py  test_lattice.py
