[metadata]
name = trivian-resonance-lattice
version = 0.2.0
description = A multi-node coherence protocol for human-AI co-evolution
license = AGPL-3.0
author = Trivian Institute
author_email = connect@trivianinstitute.org
url = https://github.com/TrivianInstitute/trivian-resonance-lattice

[options]
python_requires = >= 3.10
packages = find:
install_requires =

[options.extras_require]
crypto =
    cryptography >= 41.0
dev =
    pytest >= 7.0
    pytest-asyncio >= 0.21
